completed the study

--- a/Frequentist Case Study/Frequentist Inference Case Study - Part A (3).ipynb
+++ b/Frequentist Case Study/Frequentist Inference Case Study - Part A (3).ipynb
@@ -757,7 +757,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -766,7 +766,7 @@
        "171.8666124239471"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -778,7 +778,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -787,7 +787,7 @@
        "1.5777906257041694"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -820,7 +820,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -834,7 +834,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -924,7 +924,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -933,7 +933,7 @@
        "0.8413447460685429"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -958,7 +958,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -967,7 +967,7 @@
        "0.8413447460685429"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -992,7 +992,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1001,7 +1001,7 @@
        "0.0"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1052,7 +1052,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1063,7 +1063,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1081,7 +1081,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1099,7 +1099,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -1118,7 +1118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -1145,7 +1145,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "__A:__"
+    "__A:__ We only know the sample mean and not the population mean"
    ]
   },
   {
@@ -1164,16 +1164,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
-    "tscore = t.ppf(0.975,50)\n"
+    "tscore = t.ppf(0.975,50)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -1191,7 +1191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
