updated with random forest model result

--- a/14.3.5_Decision_Tree_Specialty_Coffee_Case_Study/Springboard Decision Tree Specialty Coffee Case Study - Tier 3.ipynb
+++ b/14.3.5_Decision_Tree_Specialty_Coffee_Case_Study/Springboard Decision Tree Specialty Coffee Case Study - Tier 3.ipynb
@@ -2208,7 +2208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 90,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -2217,7 +2217,7 @@
    "outputs": [],
    "source": [
     "# Plug in appropriate max_depth and random_state parameters \n",
-    "firstRFModel = RandomForestClassifier()\n",
+    "firstRFModel = RandomForestClassifier(random_state=1234, max_depth = 3)\n",
     "\n",
     "# Model and fit\n",
     "firstRFModel.fit(X_train, y_train)\n",
@@ -2229,7 +2229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
@@ -2237,10 +2237,10 @@
      "output_type": "stream",
      "text": [
       "Random Forest  model \n",
-      "Accuracy: 0.9747899159663865\n",
-      "Balanced accuracy: 0.9691994996873046\n",
-      "Precision score 0.9746835443037974\n",
-      "Recall score 0.9512195121951219\n"
+      "Accuracy: 0.9411764705882353\n",
+      "Balanced accuracy: 0.9204190118824265\n",
+      "Precision score 0.927710843373494\n",
+      "Recall score 0.8536585365853658\n"
      ]
     }
    ],
@@ -2253,6 +2253,45 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 92,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array(['NO', 'YES'], dtype=object), array([ 39, 189]))"
+      ]
+     },
+     "execution_count": 92,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "potential_buyers = firstRFModel.predict(new_X) \n",
+    "np.unique(potential_buyers, return_counts = True) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Percent of people who want to buy HF coffee = 70.09\n"
+     ]
+    }
+   ],
+   "source": [
+    "prop_buyers = (303+189)/702\n",
+    "print('Percent of people who want to buy HF coffee =', round(prop_buyers*100,2)) "
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "colab_type": "text",
@@ -2261,7 +2300,9 @@
    "source": [
     "### 5c. Revise conclusion\n",
     "\n",
-    "Has your conclusion changed? Or is the result of executing random forest the same as your best model reached by a single decision tree? "
+    "Has your conclusion changed? Or is the result of executing random forest the same as your best model reached by a single decision tree? \n",
+    "\n",
+    "The estimate on the people who would "
    ]
   }
  ],
