--- a/14.3.5_Decision_Tree_Specialty_Coffee_Case_Study/Springboard Decision Tree Specialty Coffee Case Study - Tier 3.ipynb
+++ b/14.3.5_Decision_Tree_Specialty_Coffee_Case_Study/Springboard Decision Tree Specialty Coffee Case Study - Tier 3.ipynb
@@ -2302,8 +2302,15 @@
     "\n",
     "Has your conclusion changed? Or is the result of executing random forest the same as your best model reached by a single decision tree? \n",
     "\n",
-    "The estimate on the people who would "
+    "The estimate on the people who would want to buy coffee increased by about little more than half a percent."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
