cleaned directory structure

--- a/FinalCapstoneProject/Notebooks/01_DataWrangling_EDA.ipynb
+++ b/FinalCapstoneProject/Notebooks/01_DataWrangling_EDA.ipynb
@@ -1061,13 +1061,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
     "# save the cleaned data\n",
-    "final_fraud_df.to_csv('../clean_data/fraud_df.csv', index= False)"
+    "final_fraud_df.to_csv('../data/fraud_df.csv', index= False)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
