shap plots for rf model

--- a/FinalCapstoneProject/Notebooks/02_FeatureEngineering.ipynb
+++ b/FinalCapstoneProject/Notebooks/02_FeatureEngineering.ipynb
@@ -1137,9 +1137,250 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>step</th>\n",
+       "      <th>amount</th>\n",
+       "      <th>oldbalanceOrg</th>\n",
+       "      <th>newbalanceOrig</th>\n",
+       "      <th>oldbalanceDest</th>\n",
+       "      <th>newbalanceDest</th>\n",
+       "      <th>isFraud</th>\n",
+       "      <th>CASH_IN</th>\n",
+       "      <th>CASH_OUT</th>\n",
+       "      <th>DEBIT</th>\n",
+       "      <th>PAYMENT</th>\n",
+       "      <th>TRANSFER</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>281</td>\n",
+       "      <td>109339.40</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>2482556.50</td>\n",
+       "      <td>2591895.91</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>381</td>\n",
+       "      <td>32426.51</td>\n",
+       "      <td>9015.00</td>\n",
+       "      <td>41441.51</td>\n",
+       "      <td>14964322.05</td>\n",
+       "      <td>14931895.54</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>20</td>\n",
+       "      <td>55810.86</td>\n",
+       "      <td>49590.00</td>\n",
+       "      <td>105400.86</td>\n",
+       "      <td>8427762.66</td>\n",
+       "      <td>8371951.80</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>331</td>\n",
+       "      <td>50514.72</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>542991.44</td>\n",
+       "      <td>593506.16</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>182</td>\n",
+       "      <td>16539.44</td>\n",
+       "      <td>135177.79</td>\n",
+       "      <td>118638.35</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16421</th>\n",
+       "      <td>375</td>\n",
+       "      <td>385567.18</td>\n",
+       "      <td>385567.18</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16422</th>\n",
+       "      <td>317</td>\n",
+       "      <td>322991.82</td>\n",
+       "      <td>322991.82</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>57138.90</td>\n",
+       "      <td>380130.72</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16423</th>\n",
+       "      <td>161</td>\n",
+       "      <td>538428.86</td>\n",
+       "      <td>538428.86</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16424</th>\n",
+       "      <td>226</td>\n",
+       "      <td>82869.09</td>\n",
+       "      <td>82869.09</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>104258.05</td>\n",
+       "      <td>187127.14</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16425</th>\n",
+       "      <td>337</td>\n",
+       "      <td>658637.38</td>\n",
+       "      <td>658637.38</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>16426 rows × 12 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       step     amount  oldbalanceOrg  newbalanceOrig  oldbalanceDest  \\\n",
+       "0       281  109339.40           0.00            0.00      2482556.50   \n",
+       "1       381   32426.51        9015.00        41441.51     14964322.05   \n",
+       "2        20   55810.86       49590.00       105400.86      8427762.66   \n",
+       "3       331   50514.72           0.00            0.00       542991.44   \n",
+       "4       182   16539.44      135177.79       118638.35            0.00   \n",
+       "...     ...        ...            ...             ...             ...   \n",
+       "16421   375  385567.18      385567.18            0.00            0.00   \n",
+       "16422   317  322991.82      322991.82            0.00        57138.90   \n",
+       "16423   161  538428.86      538428.86            0.00            0.00   \n",
+       "16424   226   82869.09       82869.09            0.00       104258.05   \n",
+       "16425   337  658637.38      658637.38            0.00            0.00   \n",
+       "\n",
+       "       newbalanceDest  isFraud  CASH_IN  CASH_OUT  DEBIT  PAYMENT  TRANSFER  \n",
+       "0          2591895.91        0        0         1      0        0         0  \n",
+       "1         14931895.54        0        1         0      0        0         0  \n",
+       "2          8371951.80        0        1         0      0        0         0  \n",
+       "3           593506.16        0        0         1      0        0         0  \n",
+       "4                0.00        0        0         0      0        1         0  \n",
+       "...               ...      ...      ...       ...    ...      ...       ...  \n",
+       "16421            0.00        1        0         0      0        0         1  \n",
+       "16422       380130.72        1        0         1      0        0         0  \n",
+       "16423            0.00        1        0         0      0        0         1  \n",
+       "16424       187127.14        1        0         1      0        0         0  \n",
+       "16425            0.00        1        0         0      0        0         1  \n",
+       "\n",
+       "[16426 rows x 12 columns]"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "final_df =pd.DataFrame(tmp_df.apply(lambda x: x.sample(tmp_df.size().min())).reset_index(drop = True))\n",
     "final_df"
@@ -1147,7 +1388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1156,16 +1397,196 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>step</th>\n",
+       "      <th>amount</th>\n",
+       "      <th>isFraud</th>\n",
+       "      <th>CASH_IN</th>\n",
+       "      <th>CASH_OUT</th>\n",
+       "      <th>DEBIT</th>\n",
+       "      <th>PAYMENT</th>\n",
+       "      <th>TRANSFER</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>281</td>\n",
+       "      <td>109339.40</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>381</td>\n",
+       "      <td>32426.51</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>20</td>\n",
+       "      <td>55810.86</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>331</td>\n",
+       "      <td>50514.72</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>182</td>\n",
+       "      <td>16539.44</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16421</th>\n",
+       "      <td>375</td>\n",
+       "      <td>385567.18</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16422</th>\n",
+       "      <td>317</td>\n",
+       "      <td>322991.82</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16423</th>\n",
+       "      <td>161</td>\n",
+       "      <td>538428.86</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16424</th>\n",
+       "      <td>226</td>\n",
+       "      <td>82869.09</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16425</th>\n",
+       "      <td>337</td>\n",
+       "      <td>658637.38</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>16426 rows × 8 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       step     amount  isFraud  CASH_IN  CASH_OUT  DEBIT  PAYMENT  TRANSFER\n",
+       "0       281  109339.40        0        0         1      0        0         0\n",
+       "1       381   32426.51        0        1         0      0        0         0\n",
+       "2        20   55810.86        0        1         0      0        0         0\n",
+       "3       331   50514.72        0        0         1      0        0         0\n",
+       "4       182   16539.44        0        0         0      0        1         0\n",
+       "...     ...        ...      ...      ...       ...    ...      ...       ...\n",
+       "16421   375  385567.18        1        0         0      0        0         1\n",
+       "16422   317  322991.82        1        0         1      0        0         0\n",
+       "16423   161  538428.86        1        0         0      0        0         1\n",
+       "16424   226   82869.09        1        0         1      0        0         0\n",
+       "16425   337  658637.38        1        0         0      0        0         1\n",
+       "\n",
+       "[16426 rows x 8 columns]"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "final_df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
